--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,12 @@
-<h1>Bienvenue dans home#index</h1>
 
-<p>Find me in app/views/home/index.html.erb</p> 
+<html>
+<body>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<div class="w3-container w3-green">
+ <h1>Demande d'emplois</h1>
+ <input type="button" value="Se connecter" onClick="connecter()">
+ <%= link_to 'New Client', new_client_path %>
+</div>
+
+</body>
+</html>
